# Sparse2D

./: CMakeLists.txt  Dockerfile  README.md  VERSION
.github/workflows/: ci-build.yml
cmake/: BuildCFITSIO.cmake  BuildFFTW3.cmake  BuildHEALPIX.cmake  BuildOptions.cmake  BuildPackage.cmake  BuildPybind.cmake  BuildTests.cmake  FetchPybind11.cmake  FindPkg.cmake
modules/: BuildFFTW.cmake  functions.cmake
src/: CMakeLists.txt
src/astro/weaklensing/libwls/: WLS_MassMapping.cc
src/astro_wl/libwl/: shearinversions.cc
src/libsparse3d/: MR2D1D.h
src/libtools/: IM_DCT.cc  IM_IOCol.h  IM_Lut.h  NR_nrutil.cc  NR_util.h
src/mc/libmc2d/: MC_Decomp.cc
src/mc/mcmain1d/: mr1d_gmca.cc
src/mc/mcmain2d/: mr_gmca.cc
src/mga/libmga1d/: MCA1D.cc  MCA1D.h
src/mga/mgamain1d/: cb_mca1d.cc
src/mr/libmr1d/: MDCT1D.cc
src/mr/libmr2d/: MR_CDecomp.cc
src/mrs/libmrs/: mrs_planck_lGMCA.h
src/msvst/libmsvst/: ImLib_msvst.h  Wavelet_msvst.h
src/msvst/msvstmain/: msvst_2d1d.cc  msvst_iwt2d.cc  msvst_iwt2d_coupled.cc  msvst_uwt2d.cc
src/mwir/libmwir/: Fisz.h  ImLib_mwir.h  Wavelet_wmir.h
src/mwir/mwirmain/: anscfisz.cc  bihaar_gaussian_filter.cc  bihaar_gaussian_filter_2d1d.cc  bihaar_poisson_filter.cc  bihaar_poisson_filter_2d1d.cc  msvst_iwt2d_coupled_nobias.cc_pbcompil  msvst_iwt2d_coupled_nobias_perline..cc_pbcompil
src/python_binding/: alm.hpp  deconvolve.hpp  filter.hpp  mr_2d1d.hpp  mrs.hpp  numpydata.hpp  numpyhealpix.hpp  starlet.hpp  transform.hpp  transform_3D.hpp
src/sparse/libmga2d/: CB_MCA.cc  WPackets.h
src/sparse/libsparse1d/: MR1D_Sigma.cc
src/sparse/libsparse2d/: FCur.cc  GMCA.cc  GMCA.h  MR1D1D.cc  MR1D1D.h
src/sparse/libsparse3d/: MR2D1D.cc  MR2D1D.h
src/sparse/libtools/: DefMath.cc  DefMath.h  IM3D_IO.cc  IM_IO.h  NR_nrutil.cc  OptMedian.cc  OptMedian.h  TempArray.h
src/sparse/sparsemain/: mr2d1d_trans.cc
tests/: CMakeLists.txt  mr_transform_test.cpp
